--- a/.temp/subgraph.yaml
+++ b/.temp/subgraph.yaml
@@ -5,31 +5,28 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
-    name: usdt
-    network: mainnet
+    name: ERC20
+    network: taiko
     source:
       address: "0x9c2dc7377717603eB92b2655c5f2E7997a4945BD"
-      abi: usdt
-      startBlock: 428035
+      abi: ERC20
+      startBlock: 556181
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - Initialized
-        - MinterAdded
-        - MinterRemoved
-        - OwnershipTransferred
+        - Token
+        - Account
+        - Minter
         - Transfer
+        - OwnershipTransferred
+        - DailyMetric
+        - HourlyMetric
       abis:
-        - name: usdt
-          file: ./abis/usdt.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
-        - event: Initialized(uint8)
-          handler: handleInitialized
         - event: MinterAdded(indexed address)
           handler: handleMinterAdded
         - event: MinterRemoved(indexed address)
@@ -38,4 +35,6 @@ dataSources:
           handler: handleOwnershipTransferred
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-      file: ./src/usdt.ts
+      blockHandlers:
+        - handler: handleBlock
+      file: ./src/erc-20.ts
