--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "subgraph:deploy-local": "cd subgraph && yarn run deploy-local"
   },
   "dependencies": {
-    "@nuxtjs/supabase": "^1.4.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.7.0",
+    "@prisma/nuxt": "^0.0.35",
     "chart.js": "^4.4.6",
     "lucide-vue-next": "^0.456.0",
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
     "vue-router": "latest"
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
+  "devDependencies": {
+    "@prisma/client": "5.22.0",
+    "prisma": "5.22.0"
   }
 }
