--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum
     name: usdt
-    network: mainnet
+    network: taiko
     source:
       address: "0x9c2dc7377717603eB92b2655c5f2E7997a4945BD"
       abi: usdt
@@ -16,20 +16,17 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - Initialized
-        - MinterAdded
-        - MinterRemoved
-        - OwnershipTransferred
+        - Token
+        - Account
+        - Minter
         - Transfer
+        - OwnershipTransferred
+        - DailyMetric
+        - HourlyMetric
       abis:
         - name: usdt
           file: ./abis/usdt.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
-        - event: Initialized(uint8)
-          handler: handleInitialized
         - event: MinterAdded(indexed address)
           handler: handleMinterAdded
         - event: MinterRemoved(indexed address)
@@ -38,4 +35,6 @@ dataSources:
           handler: handleOwnershipTransferred
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
+      blockHandlers:
+        - handler: handleBlock
       file: ./src/usdt.ts
