--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 CONTRACT_ADDRESS=0x9c2dc7377717603eB92b2655c5f2E7997a4945BD
+TAIKOSCAN_API_KEY="Taikoscan API KEY"
 DATABASE_URL="POSTGRES DATABASE URL WITH POOLING"
 DIRECT_URL="DIRECT POSTGRES DATABASE URL"
